BDCS-917 Added API docs for bill.payment.cancelled event

--- a/source/includes/events/_bill.update.md.erb
+++ b/source/includes/events/_bill.update.md.erb
@@ -9,8 +9,8 @@
     "type": "bill.update",
     "created": "2016-04-20T16:51:12Z",
     "clientId": "579b695decfa110127118752",
-    "partnerId": "55942f330cfcfd6c4ed529d9",   
-    "identifier": "example-id-123", 
+    "partnerId": "55942f330cfcfd6c4ed529d9",
+    "identifier": "example-id-123",
     "payload": {
       "resource": {
         "type": "bill",
@@ -20,11 +20,11 @@
         "company": {
           "name": "Netflix"
         },
-        "previous": {
-          "balance": "25.21"
-        },
-        "current": {
-          "balance": "52.11"
+        "bill": {
+          "balance": {
+            "previous": "25.21",
+            "current": "52.11"
+          }
         }
       }
     }
@@ -38,5 +38,4 @@ Attribute | Description
 --------- | -----------
 `type` | `bill.update`
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
-`payload.data.previous` | Object containing the names of the attributes that have changed and their previous values. 
-`payload.data.current` | Object containing the names of the attributes that have changed and their current values.
+`payload.data.bill` | Object containing the names of the bill attributes that have changed and their previous values.
