--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -63,6 +63,7 @@ includes:
   - events/bill.update
   - events/bill.payment.sent
   - events/bill.payment.scheduled
+  - events/bill.payment.cancelled
   - events/bill.payment.failed
   - events/swap.success
   - api/changelog/index
