--- a/source/includes/events/_bill.payment.cancelled.md.erb
+++ b/source/includes/events/_bill.payment.cancelled.md.erb
@@ -43,6 +43,9 @@
             "bill": {
               "dueDate": {
                 "current": "2019-03-28 17:00:00.000"
+              },
+              "amount": {
+                "current": "40.00"
               }
             },
             "trigger": "client"
