BDCS-1494 Updated Getting Started section to be more clear about integration

--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -1,6 +1,6 @@
 ## Getting Started
 
-To authenticate bills with your users, you may use the following flow.
+Our [white-label products](#products) are the fastest way to implement our API's functionality with a design that fits your branding. If you require a more custom integration you may use the following flow.
 
 ### User Creation
 
@@ -9,7 +9,8 @@ To authenticate bills with your users, you may use the following flow.
 
 ### Authentication
 
-1. Link accounts by integrating the [Connect](#connect) product into your application.
+1. Make a request to the `/client/create-token` endpoint to retrieve a secure SSO token to link accounts.
+2. Link accounts by integrating the [Connect](#connect) product into your application.
 
 ### Bills
 
