BDCS-1139 Remove extra period.

--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -45,6 +45,6 @@ Parameter | Description
 `authId` | Can be used to perform a real-time payment or swap when `company.userPresenceRequired` is `true`.
 `billId` | Can be used in conjunction with `paymentMethodId` to perform a real-time payment when `company.userPresenceRequired` is `true`.
 `cardPaymentsOnly` | Limit searches to companies that support card-based payments.
-`items` | Indicates the next desired action once an authentication is successful. Set to `swap` to automatically create a [Swap](#swap). Set to `bill` to update bill data. Set to `payment` to make a payment towards the balance..
+`items` | Indicates the next desired action once an authentication is successful. Set to `swap` to automatically create a [Swap](#swap). Set to `bill` to update bill data. Set to `payment` to make a payment towards the balance.
 `paymentMethodId` | Sets a previously added payment method to be used for a `swap` or `payment` once an authentication is successful.
 
