--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Aug 7th, 2019
+- Added URL Examples for the [Connect](#connect) component.
+
 ### May 7th, 2019
 - Removed authentication endpoints in favor of the [Connect](#connect) component.
 - Added `identifier` to [payment method object](#the-payment-method-object).
