--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Sep 3rd, 2019
+- Removed `nonce` tokens if favor of an expiration date.
+
 ### Aug 7th, 2019
 - Added URL Examples for the [Connect](#connect) component.
 
