BDCS-1783 Update copy

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,7 +1,7 @@
 # Changelog
 
 ### Sep 3rd, 2019
-- Removed `nonce` tokens if favor of an expiration date.
+- Replaced `nonce` tokens with an `expiration` date for [Client Token](#create-token) creation.
 
 ### Aug 7th, 2019
 - Added URL Examples for the [Connect](#connect) component.
