--- a/source/includes/_rsa-encryption.md.erb
+++ b/source/includes/_rsa-encryption.md.erb
@@ -45,5 +45,5 @@ Optionally, 2048-bit Asymmetric request signing may be used when making requests
 - Add the Base64 signature in the `Signature` header of the request.
 - Add the date that was included in the signature to the `Date` header of the request.
 
-When request signing is eabled, a signature must be provided with every API request.
+When request signing is enabled, a signature must be provided with every API request.
 If the signature is not provided, a `401-Unauthorized` response will result.
