BDCS-2042 Add scheduled payment notice event. Fix formatting issues.

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -61,6 +61,7 @@ includes:
   - events/auth.hold
   - events/bill.created
   - events/bill.update
+  - events/bill.scheduled-payment-notice
   - events/bill.payment.sent
   - events/bill.payment.scheduled
   - events/bill.payment.cancelled
