--- a/source/includes/events/_swap.success.md.erb
+++ b/source/includes/events/_swap.success.md.erb
@@ -5,6 +5,12 @@
 ```json
 {
   "event": {
+    "_id": "580e3e11dec21e861b5a3719",
+    "type": "swap.success",
+    "created": "2016-04-20T16:51:12Z",
+    "clientId": "579b695decfa110127118752",
+    "partnerId": "55942f330cfcfd6c4ed529d9",
+    "identifier": "example-id-123",
     "payload": {
       "resource": {
         "type": "swap",
