BDCS-2042 Add changelog

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Oct 15th, 2019
+- Added `bill.scheduled-payment-notice` event.
+
 ### Sep 3rd, 2019
 - Replaced `nonce` tokens with an `expiration` date for [Client Token](#create-token) creation.
 
