BDCS-2128 Updated the swap status

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Oct 17th, 2019
+- Updated the [Swap Status](#swap-status).
+
 ### Oct 15th, 2019
 - Added `bill.scheduled-payment-notice` event.
 
