--- a/source/includes/api/swap/_status.md.erb
+++ b/source/includes/api/swap/_status.md.erb
@@ -10,12 +10,12 @@
 }
 ```
 
-> On Hold Response
+> Hold Response
 
 ```json
 {
   "status": {
-    "type": "on-hold"
+    "type": "hold"
   }
 }
 ```
@@ -36,7 +36,7 @@ A swap `status.type` indicates the current state of a request to swap a payment 
 
 The swap of the payment method is currently in progress.
 
-### on-hold
+### hold
 
 The swap of the payment method is currently on hold as described in the [Auth Status](#auth-status).
 
