--- a/source/includes/events/_bill.update.md.erb
+++ b/source/includes/events/_bill.update.md.erb
@@ -24,6 +24,9 @@
           "balance": {
             "previous": "25.21",
             "current": "52.11"
+          },
+          "dueDate": {
+            "current": "2019-03-28 17:00:00.000"
           }
         }
       }
