--- a/source/includes/events/_bill.update.md.erb
+++ b/source/includes/events/_bill.update.md.erb
@@ -41,4 +41,4 @@ Attribute | Description
 --------- | -----------
 `type` | `bill.update`
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
-`payload.data.bill` | Object containing the names of the bill attributes that have changed and their previous values.
+`payload.data.bill` | Object containing the names of the bill attributes that have changed and their previous values as well as the current bill due date.
