--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Nov 6th, 2019
+- Added `additionalPaymentOptions` to [company object](#the-company-object).
+
 ### Oct 17th, 2019
 - Updated the [Swap Status](#swap-status).
 
