BDCS-2303 Add auth.deleted event

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -1,5 +1,8 @@
 # Changelog
 
+### Dec 3rd, 2019
+- Added `auth.deleted` event.
+
 ### Nov 6th, 2019
 - Added `additionalPaymentOptions` to [company object](#the-company-object).
 
