--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -58,6 +58,7 @@ includes:
   - events/types
   - events/auth.success
   - events/auth.invalid
+  - events/auth.deleted
   - events/auth.hold
   - events/bill.created
   - events/bill.update
