Updates to the grammar and wording

--- a/source/includes/events/_auth.needs-resync.md.erb
+++ b/source/includes/events/_auth.needs-resync.md.erb
@@ -1,4 +1,4 @@
-## Auth needs-resync
+## Auth needs resync
 
 > Example `auth.needs-resync` Event
 
@@ -32,5 +32,5 @@ When an auth requires the client to re-verify credentials.
 Attribute | Description
 --------- | -----------
 `type` | `auth.needs-resync`
-`payload.data.resource.id` | The ID of the auth that needs resync.
+`payload.data.resource.id` | The ID of the auth that needs to be resynced.
 `payload.data.company` | The [company object](#the-company-object) linked to this resource.
