--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -60,7 +60,9 @@ includes:
   - events/auth.invalid
   - events/auth.deleted
   - events/auth.hold
+  - events/auth.needs-resync
   - events/bill.created
+  - events/bill.upcoming
   - events/bill.update
   - events/bill.scheduled-payment-notice
   - events/bill.payment.sent
