BDCS-2628 Add auth hold codes section

--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -15,6 +15,7 @@ includes:
   - api/auth/index
   - api/auth/object
   - api/auth/status
+  - api/auth/hold-codes
   - api/auth/list
   - api/auth/fix-hold
   - api/auth/answer-questions
