--- a/source/includes/_errors.md.erb
+++ b/source/includes/_errors.md.erb
@@ -1,13 +1,9 @@
-## Errors
+# Errors
 
-The <%= config.apiName %> uses conventional HTTP response codes to indicate the success or failure of an API request. In general, codes in the `2xx` range indicate success, codes in the `4xx` range indicate an error that failed given the information provided (e.g., a required parameter was omitted, a charge failed, etc.), and codes in the `5xx` range indicate an error with <%= config.brand %>'s servers (these are rare).
+<%= config.apiName %> uses HTTP response status codes to indicate the success or failure of your API requests. If your request fails, <%= config.apiName %> returns an error using the appropriate status code.
 
-Code | Description
----- | -----------
-200 - OK | Everything worked as expected.
-400 - Bad Request	| The request was unacceptable, often due to missing a required parameter.
-401 - Unauthorized | No valid API key provided.
-402 - Request Failed | The parameters were valid but the request failed.
-404 - Not Found	| The requested resource doesn't exist.
-429 - Too Many Requests	| Too many requests hit the API too quickly. We recommend an exponential backoff of your requests.
-500, 502, 503, 504 - Server Errors | Something went wrong on <%= config.brand %>'s end. (These are rare.)
+In general, there are three status code ranges you can expect:
+
+* `2xx` success status codes confirm that your request worked as expected
+* `4xx` error status codes indicate an error because of the information provided (e.g., a required parameter was omitted)
+* `5xx` error status codes are rare and indicate an error with <%= config.apiName %>'s servers
