--- a/source/stylesheets/_main.scss
+++ b/source/stylesheets/_main.scss
@@ -1,12 +1,12 @@
 @charset "utf-8";
 
-@import url('//fonts.googleapis.com/css?family=Open+Sans:400,600,700');
-@import url('//fonts.googleapis.com/css?family=Raleway:300,500,700');
+@import url("//fonts.googleapis.com/css?family=Open+Sans:400,600,700");
+@import url("//fonts.googleapis.com/css?family=Raleway:300,500,700");
 
-@import 'normalize';
+@import "normalize";
 // @import 'variables'; revert to tripit defaults
-@import 'variables2'; // overrides
-@import 'icon-font';
+@import "variables2"; // overrides
+@import "icon-font";
 
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
@@ -325,7 +325,7 @@ body {
   }
 
   &:after {
-    content: '';
+    content: "";
     clear: both;
     display: block;
   }
@@ -342,7 +342,7 @@ body {
   z-index: 30;
 
   &:after {
-    content: '';
+    content: "";
     display: block;
     clear: both;
   }
@@ -695,4 +695,15 @@ body {
 .postman {
   padding-left: 28px;
   display: inline-block;
+}
+
+label.tag {
+  font-size: 12px;
+  text-transform: uppercase;
+  font-weight: bold;
+  background: $tg-blue;
+  color: #fff;
+  padding: 3px 6px;
+  border-radius: 3px;
+  margin-right: 3px;
 }
