--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -43,6 +43,7 @@ When creating subsequent tokens for an existing `client`, be sure to use the sam
 Parameter | Description
 ----- | -----------
 `identifier` | A unique identifier that represents a user in your system.
+`nonce` | Optional boolean specifying whether the token is for one time use. Default is false.
 `expiration` | An `ISO 8601` formatted date that sets when this token will expire. If no `expiration` is specified, the token will expire after 24 hours.
 `meta` | Additional information about the user in your system.
 
