BDCS-2329 Updated to include token revoke

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -47,3 +47,8 @@
 - Added `testswap` to the list of valid testing credentials.
 - Added Company payment fees to the `company` object
 - Added `company.userPresenceRequired` to [company object](#the-company-object) and documentation for [Connect](#connect).
+
+### Mar 4th, 2020
+- Added definition for [Revoke Tokens](#revoke-tokens)
+- Added `nonce` back for [Client Token](#create-token) creation.
+- Added `accessTokenExpiresIn` back for [Client Token](#create-token) creation.
