--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -48,6 +48,7 @@ includes:
   - api/client/index
   - api/client/create
   - api/client/create-token
+  - api/client/revoke-tokens
   - api/swap/index
   - api/swap/object
   - api/swap/status
