--- a/source/includes/_errors.md.erb
+++ b/source/includes/_errors.md.erb
@@ -1,4 +1,4 @@
-# Errors
+## Errors
 
 <%= config.apiName %> uses HTTP response status codes to indicate the success or failure of your API requests. If your request fails, <%= config.apiName %> returns an error using the appropriate status code.
 
