BDCS-3348 Add some verbiage to related to AES/RSA encryption

--- a/source/includes/api/changelog/_index.md.erb
+++ b/source/includes/api/changelog/_index.md.erb
@@ -52,3 +52,6 @@
 - Added definition for [Revoke Tokens](#revoke-tokens)
 - Added `nonce` back for [Client Token](#create-token) creation.
 - Added `accessTokenExpiresIn` back for [Client Token](#create-token) creation.
+
+### Jun 29th, 2020
+- Added revised message security to describe [AES/RSA message encryption ](#message-security)
