--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -55,6 +55,8 @@ includes:
   - api/swap/create
   - api/swap/companies
   - api/swap/list
+  - api/partner/index
+  - api/partner/public-keys
   - events/index
   - events/object
   - events/types
