--- a/source/includes/products/cardswap.md.erb
+++ b/source/includes/products/cardswap.md.erb
@@ -6,7 +6,7 @@ https://cardswap.q2open.io (production)
 https://sb-cardswap.q2open.io (sandbox)
 ```
 
-![CardSwap](https://www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif)
+![CardSwap](https://qa-www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif)
 
 Q2 CardSwap™ is the first switch kit for subscription and eCommerce merchants, allowing users to put your card top-of-wallet for their favorite services—all in one place.
 
