BDCS-3450 Add sync client docs

--- a/source/includes/api/client/_create.md.erb
+++ b/source/includes/api/client/_create.md.erb
@@ -32,7 +32,7 @@ curl "<%= config.host %>/client" \
 
 Creates or returns an existing client to be used with requests.
 
-If a client already exists with the same `identifier` sent, then the existing `clientId` will be returned.
+If a client already exists with the same `identifier` included in the request, the existing `clientId` is returned.
 
 ### HTTP Request
 
