--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -49,6 +49,7 @@ includes:
   - api/client/create
   - api/client/create-token
   - api/client/revoke-tokens
+  - api/client/sync
   - api/swap/index
   - api/swap/object
   - api/swap/status
