BDCS-3450 Wrong url endpoint

--- a/source/includes/api/client/_sync.md.erb
+++ b/source/includes/api/client/_sync.md.erb
@@ -50,7 +50,7 @@ If a client already exists with the same `identifier` included in the request, t
 
 ### HTTP Request
 
-`POST <%= config.host %>/client`
+`POST <%= config.host %>/client/sync`
 
 ### Arguments
 
