--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -12,6 +12,7 @@ includes:
   - products/connect
   - products/cardswap
   - products/biller-direct
+  - products/sessions
   - api/auth/index
   - api/auth/object
   - api/auth/status
