BDCS-3450 Add card code example

--- a/source/includes/api/client/_sync.md.erb
+++ b/source/includes/api/client/_sync.md.erb
@@ -27,6 +27,7 @@ curl "<%= config.host %>/client" \
     "cards": [{
       "identifier": "fiId123",
       "cardNumber": "4111111111111111",
+      "cardCode": "123",
       "expMonth": "02",
       "expYear": "2040",
       "zipcode": "12345",
