--- a/source/includes/products/biller-direct.md.erb
+++ b/source/includes/products/biller-direct.md.erb
@@ -6,7 +6,7 @@ https://biller-direct.q2open.io (production)
 https://sb-biller-direct.q2open.io (sandbox)
 ```
 
-![Biller Direct](https://qa-www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_spend.gif)
+<%= image_tag 'images/products/biller-direct.gif' %>
 
 Biller Direct is a card-enabled bill pay solution designed to dramatically improve the user experience and economic model of bill pay.
 
@@ -28,5 +28,5 @@ Parameter | Description
 ----- | -----------
 `companyId` | Deeplink to a specific bill for the `companyId` specified if a bill already exists, or fallback to the authentication screen for the specified `companyId`.
 `billId` | Setting to a specific [Bill](#bill) `_id` will deeplink the user into the detailed view of the bill.
-`skipOnboarding` | Setting to `true` will skip the introductary screens and animations.
+`skipOnboarding` | Setting to `true` will skip the introductory screens and animations.
 `cardPaymentsOnly` | Limit searches to companies that support card-based payments.
