--- a/source/includes/products/cardswap.md.erb
+++ b/source/includes/products/cardswap.md.erb
@@ -6,8 +6,17 @@ https://cardswap.q2open.io (production)
 https://sb-cardswap.q2open.io (sandbox)
 ```
 
-![CardSwap](https://qa-www.q2ebanking.com/img/pages/q2_open/cardswap/cardswap_select.gif)
+<%= image_tag 'images/products/cardswap.gif' %>
 
 Q2 CardSwap™ is the first switch kit for subscription and eCommerce merchants, allowing users to put your card top-of-wallet for their favorite services—all in one place.
 
 [View demo](https://cardswap.q2open.io)
+
+### URL parameters
+
+The following URL parameters can be optionally passed into the CardSwap URL to customize the experience.
+
+Parameter | Description
+----- | -----------
+`skipOnboarding` | Setting to `true` will skip the introductory screen.
+`sessionId` | [Session](#sessions) ID to be linked to corresponding [Events](#event).
