--- a/source/includes/products/connect.md.erb
+++ b/source/includes/products/connect.md.erb
@@ -6,7 +6,7 @@ https://connect.q2open.io (production)
 https://sb-connect.q2open.io (sandbox)
 ```
 
-![Connect](https://qa-www.q2ebanking.com/img/pages/q2_open/q2-biller-direct/biller-direct_add-bills.gif)
+<%= image_tag 'images/products/connect.gif' %>
 
 Connect is a drop-in module that provides a secure, elegant authentication flow for each company that the <%= config.apiName %> supports. Connect makes it secure and easy for [clients](#client) to link their accounts, while doing the heavy lifting for the authentication.
 
