--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -59,6 +59,8 @@ includes:
   - api/swap/list
   - api/partner/index
   - api/partner/public-keys
+  - api/partner/public-key
+  - api/partner/public-key-latest
   - events/index
   - events/object
   - events/types
