--- a/source/includes/api/partner/_public-key.md.erb
+++ b/source/includes/api/partner/_public-key.md.erb
@@ -3,7 +3,7 @@
 > Example Request
 
 ```shell
-curl "<%= config.host %>/partner/public-key/{keyId}" \
+curl "<%= config.host %>/partner/public-keys/{keyId}" \
   -H "<%= config.auth %>" \
   -G
 ```
