--- a/source/includes/api/client/_create-token.md.erb
+++ b/source/includes/api/client/_create-token.md.erb
@@ -8,17 +8,7 @@ curl "<%= config.host %>/client/create-token" \
   -H "Content-Type: application/json" \
   -d '{
     "identifier": "Bk0zwVx1Z",
-    "meta": {
-      "firstName": "Demo",
-      "lastName": "User",
-      "email": "demo@demo.com",
-      "phone": "123-123-1234",
-      "address1": "123 Api St.",
-      "address2": "P.O. Box 283",
-      "city": "Demo",
-      "state": "Q2",
-      "zipcode": "12345"
-    }
+    "accessTokenExpiresIn": 3600
   }'
 ```
 
@@ -46,7 +36,6 @@ Parameter | Description
 `nonce` | Optional boolean specifying whether the token is for one time use. Default is false.
 `expiration` | An `ISO 8601` formatted date that sets when this token will expire. If no `expiration` is specified, the token will expire after 24 hours.
 `accessTokenExpiresIn` | Optional number of seconds that an access token issued using the SSO token is valid. Default is 1 hour (3600).
-`meta` | Additional information about the user in your system.
 
 ### Returns
 
