BDCS-3491 Replace skipOnboarding with startView

--- a/source/includes/products/cardswap.md.erb
+++ b/source/includes/products/cardswap.md.erb
@@ -18,5 +18,5 @@ The following URL parameters can be optionally passed into the CardSwap URL to c
 
 Parameter | Description
 ----- | -----------
-`skipOnboarding` | Setting to `true` will skip the introductory screen.
+`startView` | Setting to `brands` will skip the introductory screen and return to selecting a brand when the CardSwap process is complete.
 `sessionId` | [Session](#sessions) ID to be linked to corresponding [Events](#event).
