BDCS-3491 Better lingo for startView

--- a/source/includes/products/cardswap.md.erb
+++ b/source/includes/products/cardswap.md.erb
@@ -18,5 +18,5 @@ The following URL parameters can be optionally passed into the CardSwap URL to c
 
 Parameter | Description
 ----- | -----------
-`startView` | Setting to `brands` will skip the introductory screen and return to selecting a brand when the CardSwap process is complete.
+`startView` | Indicates where users are redirected to after completing a swap. Set to `brands` to skip the introductory page and return users to the brand selection page.
 `sessionId` | [Session](#sessions) ID to be linked to corresponding [Events](#event).
