BDCS-3408 update links to images to point to staging environment bucket

--- a/source/includes/api/auth/_list.md.erb
+++ b/source/includes/api/auth/_list.md.erb
@@ -22,7 +22,7 @@ curl "<%= config.host %>/auth/list/566595c8ce88ccec69328566" \
         "_id": "579b695decea110719b1874d",
         "name": "Time Warner Cable",
         "logo": {
-          "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/4c805851c738c006546b234e3c3c793d.png",
+          "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/4c805851c738c006546b234e3c3c793d.png",
           "background": false
         } 
       }
@@ -36,7 +36,7 @@ curl "<%= config.host %>/auth/list/566595c8ce88ccec69328566" \
         "_id": "579b695decea110719b1874d",
         "name": "The Grove at Auburn",
         "logo": {
-          "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/0e9a971a96646da46f5faa68862d0f2d.jpg",
+          "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/0e9a971a96646da46f5faa68862d0f2d.jpg",
           "background": true
         } 
       }
