--- a/source/includes/api/company/_object.md.erb
+++ b/source/includes/api/company/_object.md.erb
@@ -8,10 +8,10 @@
   "name": "Netflix",
   "status": "operational",
   "logo": {
-    "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
+    "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
     "background": false,
     "svg": {
-      "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.svg",
+      "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.svg",
       "color": "FF041F"
     }
   },
