--- a/source/includes/api/swap/_object.md.erb
+++ b/source/includes/api/swap/_object.md.erb
@@ -19,7 +19,7 @@
     "name": "Hulu",
     "status": "operational",
     "logo": {
-      "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/a3c89f48378c84713fb31ce0e97bfa15.png",
+      "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/a3c89f48378c84713fb31ce0e97bfa15.png",
       "background": false
     }
   },
