--- a/source/includes/events/_swap.success.md.erb
+++ b/source/includes/events/_swap.success.md.erb
@@ -23,14 +23,14 @@
           "name": "Test Merchant",
           "status": "operational",
           "logo": {
-            "url": "https://s3.us-east-1.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/1a49a63fa87749b3abdf74c2ee9deb36.png",
+            "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/1a49a63fa87749b3abdf74c2ee9deb36.png",
             "background": false,
             "svg": {
-              "url": "https://s3.us-east-1.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/968e40f95dd9a0e85cbae10fb221059b.svg",
+              "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/968e40f95dd9a0e85cbae10fb221059b.svg",
               "color": "06C580"
             },
             "symbol": {
-              "url": "https://s3.us-east-1.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/2533c1ac55b047c770085cc24e3d1e85.svg",
+              "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/2533c1ac55b047c770085cc24e3d1e85.svg",
               "color": "06C580"
             }
           },
