--- a/source/includes/api/swap/_companies.md.erb
+++ b/source/includes/api/swap/_companies.md.erb
@@ -17,10 +17,10 @@ curl "<%= config.host %>/swap/companies" \
       "_id": "579b695decea110719b1874d",
       "name": "Netflix",
       "logo": {
-        "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
+        "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
         "background": false,
         "svg": {
-          "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.svg",
+          "url": "https://s3.amazonaws.com/app-assets.unbill.io-primary/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.svg",
           "color": "FF041F"
         }
       },
