--- a/source/includes/products/integration.md.erb
+++ b/source/includes/products/integration.md.erb
@@ -11,4 +11,4 @@ Integration with our products is straightforward.
 
 ## Example Code
 
-See our [integration examples](https://github.com/unbill/integration-examples) for an example implementation in Swift and React Native.
+See our [iOS](https://github.com/unbill/connect-ios) and [Android](https://github.com/unbill/connect-android) integration examples for example implementations in Swift and Java.
